--- a/services.html
+++ b/services.html
@@ -627,6 +627,17 @@
                                   <div class="tables__tableItm">Генеральная</div>                   
                                    <div class="tables__tableItm">После ремонта</div>                
                                 </div>
+                                <div class="mob-tables__tableRow_th">
+                                    <div class="mob-tables__tableRow_th-item">
+                                        Поддерживающая
+                                    </div>
+                                    <div class="mob-tables__tableRow_th-item">
+                                        Генеральная
+                                    </div>
+                                    <div class="mob-tables__tableRow_th-item">
+                                        После ремонта
+                                    </div>
+                                </div>
                                 <div class="tables__tableRow">
                                   <div class="tables__tableItm">Цена</div>
                                   <div class="tables__tableItm">от 60 руб./м2</div>
@@ -850,9 +861,6 @@
                         </div>                       
                     </div>
                 </div>
-                <div class="mob-section-more-btn">
-                    <a href="#"><button class="btn">Смотреть прайс-лист</button></a>
-                </div>
             </div>
         </section>
         <section class="calc-section">
@@ -943,80 +951,78 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
-                            
-                        
+                        </div>                    
                         <div class="calc-param-item" style="align-items: flex-start;">
                             <div class="calc-param-title">Дополнительные услуги:</div>
                             <div class="calc-adds-wrapper">
                                 <div class="calc-add-items row">
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox1">
                                             <label for="checkbox1"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox2">
                                             <label for="checkbox2"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox3">
                                             <label for="checkbox3"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox4">
                                             <label for="checkbox4"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox5">
                                             <label for="checkbox5"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox6">
                                             <label for="checkbox6"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox7">
                                             <label for="checkbox7"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox8">
                                             <label for="checkbox8"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox9">
                                             <label for="checkbox9"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox10">
                                             <label for="checkbox10"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox11">
                                             <label for="checkbox11"><p>Поменять постельное белье</p></label>
                                         </div>
                                     </div>
-                                    <div class="col-md-4 col-6">
+                                    <div class="col-sm-4 col-6">
                                         <div class="checkbox-container calc-add-item">
                                             <input type="checkbox" id="checkbox12">
                                             <label for="checkbox12"><p>Поменять постельное белье</p></label>
